--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,11 +1,11 @@
             {%- if site.email -%}
-            <a href="mailto:{{ site.email | encode_email }}" title="email"><i class="fas fa-envelope"></i></a>
+            <a href="mailto:{{ site.email | encode_email }}" title="Email"><i class="fas fa-envelope"></i></a>
             {% endif %}
             {%- if site.telegram_username -%}
-            <a href="https://telegram.me/{{ site.telegram_username }}" title="telegram"><i class="fab fa-telegram"></i></a>
+            <a href="https://telegram.me/{{ site.telegram_username }}" title="Telegram"><i class="fab fa-telegram"></i></a>
             {% endif %}
             {%- if site.whatsapp_number -%}
-            <a href="https://wa.me/{{ site.whatsapp_number }}" title="whatsapp"><i class="fab fa-whatsapp"></i></a>
+            <a href="https://wa.me/{{ site.whatsapp_number }}" title="Whatsapp"><i class="fab fa-whatsapp"></i></a>
             {% endif %}
             {%- if site.orcid_id -%}
             <a href="https://orcid.org/{{ site.orcid_id }}" title="ORCID"><i class="ai ai-orcid"></i></a>
